# lemi

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  TRACEABILITY.md  index.html  lake-manifest.json  lakefile.lean  netlify.toml  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
eval/: rbj_compare.py  rbj_reference.py
fixtures/: rbj_coefficients.json
lean/: BilinearTransform.lean  BiquadStability.lean  FilterParams.lean  README.md  SchurCohn.lean
scripts/: serve.mjs  squig-proxy.mjs
src/: biquad.rs  coefficients.rs  error.rs  frequency.rs  lib.rs  main.tsx  params.rs
src/app/: App.tsx  theme.ts
src/app/components/: EQPanel.tsx  FrequencyChart.tsx
src/app/dsp/: biquad.ts  squig.ts  verifiedBiquad.ts  wasmBiquad.ts
src/app/dsp/wasm-pkg/: package.json  timbrei_dsp.d.ts  timbrei_dsp.js  timbrei_dsp_bg.wasm  timbrei_dsp_bg.wasm.d.ts
src/app/utils/: filters.ts
src/styles/: theme.css
tests/: biquad.rs  coefficients.rs  common_smoke.rs  ulp_matrix.rs
tests/common/: mod.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
