[package]
name = "lemi"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []

[dependencies]
libm = { version = "0.2", default-features = false }

[dev-dependencies]
serde_json = "1"

# Evaluation-only CLI bridge; uses std, so it is excluded from the
# `--no-default-features` (no_std / Cortex-M4) build.
[[bin]]
name = "rbj_eval"
required-features = ["std"]
