[package]
name = "timbrei-dsp-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bridge exposing the verified lemi DSP to the Timbrei frontend."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Formally verified reference core (Rust/Lean). Reused as is: this crate is
# only a thin wasm-bindgen shell over it.
lemi = { path = ".." }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true
